feat: render flight and stay details based on URL parameters

--- a/flight/flightdetails.html
+++ b/flight/flightdetails.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
@@ -164,7 +164,7 @@
             <button class="btn-stroke">
               <img src="/assets/share-icon.svg" alt="" />
             </button>
-            <button class="btn-primary">Book Now</button>
+            <div class="flight-book-btn"></div>
           </div>
         </div>
         <div class="flight-details-banner">
