--- a/stay/staysbookingdetails.html
+++ b/stay/staysbookingdetails.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
@@ -140,30 +140,15 @@
     <section class="booking-payment container">
       <div class="hotel-booking-payment">
         <div class="booking-payment-wrapper">
-          <div class="room-details-heading">
-            <h1 class="fs-28 fw-bold">
-              Superior room - 1 double bed or 2 twin beds
-            </h1>
-            <h2 class="fs-32 fw-bold text-accent-slamon">$240</h2>
-          </div>
+          <div class="room-details-heading"></div>
           <div class="hotel-itinerary-container">
             <div class="hotel-itinerary">
-              <img src="/assets/hotel-logo.svg" alt="" />
-              <div class="itinerary-hotel-info">
-                <h2 class="fw-semi-bold fs-24">
-                  CVK Park Bosphorus Hotel Istanbul
-                </h2>
-                <div class="hotel-location">
-                  <img src="/assets/location-icon.svg" alt="" />
-                  <p class="fs-14 fw-medium">
-                    Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
-                  </p>
-                </div>
-              </div>
+              <div class="hotel-logo"></div>
+              <div class="itinerary-hotel-info"></div>
             </div>
             <div class="hotel-itinerary-timeframe flex">
               <div class="itinerary-time flex">
-                <h3 class="fs-24 fw-semi-bold text-center">Thursday, Dec 8</h3>
+                <h3 class="fs-24 fw-semi-bold text-center">Thursday, Nov 9</h3>
                 <p class="text-neutral-grey fw-medium">Check-In</p>
               </div>
               <img
@@ -172,7 +157,7 @@
                 width="38px"
               />
               <div class="itinerary-time flex">
-                <h3 class="fs-24 fw-semi-bold text-center">Friday, Dec 9</h3>
+                <h3 class="fs-24 fw-semi-bold text-center">Friday, Nov 13</h3>
                 <p class="text-neutral-grey fw-medium">Check-Out</p>
               </div>
             </div>
@@ -225,52 +210,16 @@
             <div class="booking-total-banner">
               <img src="/assets/listing-bg-main-2.jpg" alt="" />
             </div>
-            <div class="booking-total-heading">
-              <h2
-                class="fs-14 fw-medium text-neutral-grey limit-text-to-1-line"
-              >
-                CVK Park Bosphorus Hotel Istanbul
-              </h2>
-              <h2 class="fs-18 fw-semi-bold">
-                Superior room - 1 double bed or 2 twin beds
-              </h2>
-              <div class="rating-badge">
-                <div class="rating-badge-ratings flex">
-                  <p class="fs-12 fw-medium">4.2</p>
-                  <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                  <h2 class="fs-12 text-muted">54 reviews</h2>
-                </div>
-              </div>
-            </div>
+            <div class="booking-total-heading"></div>
           </div>
           <div class="booking-price-info">
             <p class="fw-medium">
               Your booking is protected by
               <strong class="fw-bold">golobe</strong>
             </p>
-            <div class="booking-price-details fw-medium">
-              <h1 class="fw-bold">Price Details</h1>
-              <div class="price">
-                <p>Base Fare</p>
-                <h2 class="fw-semi-bold">$240</h2>
-              </div>
-              <div class="price">
-                <p>Discount</p>
-                <h2 class="fw-semi-bold">$0</h2>
-              </div>
-              <div class="price">
-                <p>Taxes</p>
-                <h2 class="fw-semi-bold">$20</h2>
-              </div>
-              <div class="price">
-                <p>Service Fee</p>
-                <h2 class="fw-semi-bold">$5</h2>
-              </div>
-            </div>
-            <div class="price">
-              <p class="fw-bold">Total</p>
-              <h2 class="fw-semi-bold">$265</h2>
-            </div>
+            <div class="booking-price-details fw-medium"></div>
+            <div class="price"></div>
+            <div class="confirm-button"></div>
           </div>
         </aside>
       </div>
@@ -412,7 +361,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
-      src="/src/javascript/stay-page/staysdetails.js"
+      src="/src/javascript/stay-page/staysbookingdetails.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
