--- a/stay/staysconfirmation.html
+++ b/stay/staysconfirmation.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
@@ -138,18 +138,10 @@
 
     <section>
       <div class="hotel-details-wrapper">
-        <div class="hotel-details-heading">
-          <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
-          <h2 class="fs-32 fw-bold">$240</h2>
-        </div>
+        <div class="hotel-details-heading"></div>
         <div class="hotel-details-info">
-          <div>
-            <div class="hotel-details-location">
-              <img src="/assets/location-icon.svg" alt="" />
-              <p class="fs-14">
-                Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
-              </p>
-            </div>
+          <div class="hotel-content-location">
+            <div class="hotel-details-location"></div>
           </div>
           <div class="hotel-details-btn">
             <button class="btn-stroke">
@@ -176,9 +168,7 @@
                       <h1 class="fs-20 fw-bold">Jesnie Magaling</h1>
                     </div>
                   </div>
-                  <h2 class="fs-14 fw-bold">
-                    Superior room - 1 double bed or 2 twin beds
-                  </h2>
+                  <div class="room-info"></div>
                 </div>
                 <div class="hotel-details grid-4">
                   <div class="flex">
@@ -358,15 +348,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
-      src="/src/javascript/stay-page/searchstays.js"
-    ></script>
-    <script
-      type="module"
-      src="/src/javascript/stay-page/staysdetails.js"
-    ></script>
-    <script
-      type="module"
-      src="/src/javascript/stay-page/stayslisting.js"
+      src="/src/javascript/stay-page/staysconfirmation.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
