--- a/flight/flightbookingdetails.html
+++ b/flight/flightbookingdetails.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
@@ -408,7 +408,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
-      src="/src/javascript/flight-page/flightdetails.js"
+      src="/src/javascript/flight-page/flightbookingdetails.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
