--- a/flight/flightconfirmation.html
+++ b/flight/flightconfirmation.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
@@ -138,83 +138,93 @@
 
     <section>
       <div class="flight-details-wrapper">
-        <div class="flight-details-heading">
-          <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
-          <h2 class="fs-32 fw-bold">$240</h2>
-        </div>
-        <div class="flight-confirmation flight-details-info">
-          <div>
-            <div class="flight-details-location">
-              <img src="/assets/location-icon.svg" alt="" />
-              <p class="fs-14">
-                Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
-              </p>
+        <div id="flight-details">
+          <div class="flight-details-heading">
+            <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
+            <h2 class="fs-32 fw-bold">$240</h2>
+          </div>
+          <div class="flight-confirmation flight-details-info">
+            <div>
+              <div class="flight-details-location">
+                <img src="/assets/location-icon.svg" alt="" />
+                <p class="fs-14">
+                  Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
+                </p>
+              </div>
+            </div>
+            <div class="flight-details-btn">
+              <button class="btn-stroke">
+                <img src="/assets/share-icon.svg" alt="" />
+              </button>
+              <button class="btn-primary">Download</button>
             </div>
           </div>
-          <div class="flight-details-btn">
-            <button class="btn-stroke">
-              <img src="/assets/share-icon.svg" alt="" />
-            </button>
-            <button class="btn-primary">Download</button>
-          </div>
-        </div>
-        <div class="flight-details-confirmation">
-          <div class="flight-terms">
-            <div class="flight-ticket">
-              <div class="flight-time">
-                <h1 class="fs-32 fw-semi-bold">11:11 pm</h1>
-                <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
-                <img src="/assets/airplanevert-icon.svg" alt="" />
-                <h1 class="fs-32 fw-semi-bold">12:12 pm</h1>
-                <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
-              </div>
-              <div class="ticket-info">
-                <div class="ticket-profile">
-                  <div class="flex">
-                    <img src="/assets/profile-icon.svg" alt="" />
-                    <div class="profile-name">
-                      <h1 class="fs-20 fw-bold">Jesnie Magaling</h1>
-                      <p class="fs-14">Boarding Pass N’123</p>
-                    </div>
-                  </div>
-                  <h2 class="fs-14 fw-bold">Business Class</h2>
+          <div class="flight-details-confirmation">
+            <div class="flight-terms">
+              <div class="flight-ticket">
+                <div class="flight-time">
+                  <h1 class="fs-32 fw-semi-bold">11:11 pm</h1>
+                  <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
+                  <img src="/assets/airplanevert-icon.svg" alt="" />
+                  <h1 class="fs-32 fw-semi-bold">12:12 pm</h1>
+                  <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
                 </div>
-                <div class="plane-details grid-4">
-                  <div class="flex">
-                    <img src="/assets/calendar-primary-icon.svg" alt="" />
-                    <div class="profile-name">
-                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Date</h1>
-                      <p class="fs-12 fw-medium">Newark(EWR)</p>
+                <div class="ticket-info">
+                  <div class="ticket-profile">
+                    <div class="flex">
+                      <img src="/assets/profile-icon.svg" alt="" />
+                      <div class="profile-name">
+                        <h1 class="fs-20 fw-bold">Jesnie Magaling</h1>
+                        <p class="fs-14">Boarding Pass N’123</p>
+                      </div>
+                    </div>
+                    <h2 class="fs-14 fw-bold">Business Class</h2>
+                  </div>
+                  <div class="plane-details grid-4">
+                    <div class="flex">
+                      <img src="/assets/calendar-primary-icon.svg" alt="" />
+                      <div class="profile-name">
+                        <h1 class="text-neutral-grey fs-14 fw-semi-bold">
+                          Date
+                        </h1>
+                        <p class="fs-12 fw-medium">Newark(EWR)</p>
+                      </div>
+                    </div>
+                    <div class="flex">
+                      <img src="/assets/clock-icon.svg" alt="" />
+                      <div class="profile-name">
+                        <h1 class="text-neutral-grey fs-14 fw-semi-bold">
+                          Time
+                        </h1>
+                        <p class="fs-12 fw-medium">12:00</p>
+                      </div>
+                    </div>
+                    <div class="flex">
+                      <img src="/assets/door-icon.svg" alt="" />
+                      <div class="profile-name">
+                        <h1 class="text-neutral-grey fs-14 fw-semi-bold">
+                          Gate
+                        </h1>
+                        <p class="fs-12 fw-medium">A12</p>
+                      </div>
+                    </div>
+                    <div class="flex">
+                      <img src="/assets/airlineseat-primary-icon.svg" alt="" />
+                      <div class="profile-name">
+                        <h1 class="text-neutral-grey fs-14 fw-semi-bold">
+                          Seat
+                        </h1>
+                        <p class="fs-12 fw-medium">128</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="flex">
-                    <img src="/assets/clock-icon.svg" alt="" />
-                    <div class="profile-name">
-                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Time</h1>
-                      <p class="fs-12 fw-medium">12:00</p>
+                  <div class="ticket-barcode">
+                    <div class="ticket-code">
+                      <h1 class="fs-32 fw-semi-bold">EK</h1>
+                      <p class="fw-medium fs12">ABC12345</p>
                     </div>
+                    <img src="/assets/barcode-icon.svg" alt="" />
                   </div>
-                  <div class="flex">
-                    <img src="/assets/door-icon.svg" alt="" />
-                    <div class="profile-name">
-                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Gate</h1>
-                      <p class="fs-12 fw-medium">A12</p>
-                    </div>
-                  </div>
-                  <div class="flex">
-                    <img src="/assets/airlineseat-primary-icon.svg" alt="" />
-                    <div class="profile-name">
-                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Seat</h1>
-                      <p class="fs-12 fw-medium">128</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="ticket-barcode">
-                  <div class="ticket-code">
-                    <h1 class="fs-32 fw-semi-bold">EK</h1>
-                    <p class="fw-medium fs12">ABC12345</p>
-                  </div>
-                  <img src="/assets/barcode-icon.svg" alt="" />
                 </div>
               </div>
             </div>
@@ -358,7 +368,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
-      src="/src/javascript/flight-page/flightdetails.js"
+      src="/src/javascript/flight-page/flightconfirmation.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
