--- a/flight/flightlisting.html
+++ b/flight/flightlisting.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/travellian-travel-app/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -93,14 +93,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/travellian-travel-app/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/travellian-travel-app/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/travellian-travel-app/assets/settings-icon.svg"
                 alt=""
@@ -121,7 +121,7 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a href="../flightsearch.html" class="mobile-link" target="_blank">
           <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
