--- a/stay/searchstays.html
+++ b/stay/searchstays.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="company-logo company-logo-nav">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/travellian-travel-app/assets/company-logo-white.svg" alt="Logo"
           /></a>
         </div>
