--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="company-logo company-logo-nav">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/assets/company-logo-white.svg" alt="Logo"
           /></a>
         </div>
