--- a/stay/stayslisting.html
+++ b/stay/stayslisting.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -75,18 +75,24 @@
         </div>
         <!-- Mobile Navigation -->
         <div class="mobile-nav" id="mobileNav">
-          <a href="./flightsearch.html" class="mobile-link" target="_blank">
+          <a href="../flightsearch.html" class="mobile-link" target="_blank">
             <img src="/assets/airplane-icon.svg" alt="airplane" />
             <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
           </a>
-          <a href="/stay/searchstays.html" class="mobile-link" target="_blank">
+          <a
+            href="../stay/searchstays.html"
+            class="mobile-link"
+            target="_blank"
+          >
             <img src="/assets/bed-icon.svg" alt="bed" />
             <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
           </a>
-          <a href="/auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
+          <a
+            href="../auth/favorites.html"
+            class="mobile-link fs-16 fw-semi-bold"
             ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
           >
-          <a href="/auth/account.html" class="mobile-link fs-16 fw-semi-bold"
+          <a href="../auth/account.html" class="mobile-link fs-16 fw-semi-bold"
             ><img src="/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
           >
         </div>
@@ -106,14 +112,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
