--- a/stay/staysconfirmation.html
+++ b/stay/staysconfirmation.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="../landing/index.html"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -91,14 +91,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
@@ -119,7 +119,7 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a href="../flightsearch.html" class="mobile-link" target="_blank">
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
