--- a/landing/index.html
+++ b/landing/index.html
@@ -30,12 +30,16 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="/travellian-travel-app/assets/responsive.css"
+    />
     <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DolsZaOw.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/nav-BRbo9wLN.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/flightForm-BNUiH5sV.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/stayForm-BQbN_MYX.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/places-m7fFGoKg.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/main-C4v7jIRw.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/main-Dx-ScBXV.js"></script>
     <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/swiper-CsF7dNSY.css">
     <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/nav-2jKT-IqO.css">
   </head>
