--- a/stay/searchstays.html
+++ b/stay/searchstays.html
@@ -30,15 +30,16 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
-    <script type="module" crossorigin src="/travellian-travel-app/assets/searchStays-DE_XUAEw.js"></script>
-    <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/swiper-DolsZaOw.js">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/travellian-travel-app/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/stay-page/searchstay.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/responsive.css" />
+    <script type="module" crossorigin src="/travellian-travel-app/assets/searchStays-ChG2B-QT.js"></script>
+    <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/swiper-DZbraFs1.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/stayForm-BQbN_MYX.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/nav-BUibuh3s.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/places-m7fFGoKg.js">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/swiper-CsF7dNSY.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/searchStays-C8cvBm5m.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/styles-2jKT-IqO.css">
   </head>
   <body>
     <!-- Header & Navigation -->
