--- a/stay/staysdetails.html
+++ b/stay/staysdetails.html
@@ -30,15 +30,16 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
-    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DolsZaOw.js"></script>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/travellian-travel-app/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/stay-page/staysdetails.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/responsive.css" />
+    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DZbraFs1.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/nav-BUibuh3s.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/stays-BfrsDapl.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/staysdetails-slZo-5Hr.js"></script>
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/swiper-CsF7dNSY.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/styles-2jKT-IqO.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/stayslisting-BkcxaVwb.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/staysdetails-DhUYwKWT.css">
   </head>
   <body>
     <!-- Header & Navigation -->
