--- a/stay/stayslisting.html
+++ b/stay/stayslisting.html
@@ -30,15 +30,16 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
-    <script type="module" crossorigin src="/travellian-travel-app/assets/staysListing-D7MqaMvS.js"></script>
-    <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/swiper-DolsZaOw.js">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/travellian-travel-app/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/travellian-travel-app/css/utils/responsive.css" />
+    <script type="module" crossorigin src="/travellian-travel-app/assets/staysListing-vtieR4lD.js"></script>
+    <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/swiper-DZbraFs1.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/nav-BUibuh3s.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/stayForm-BQbN_MYX.js">
     <link rel="modulepreload" crossorigin href="/travellian-travel-app/assets/stays-BfrsDapl.js">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/swiper-CsF7dNSY.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/styles-2jKT-IqO.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/stayslisting-BkcxaVwb.css">
   </head>
   <body>
     <!-- Header & Navigation -->
