move css to public folder

--- a/flight/flightbookingdetails.html
+++ b/flight/flightbookingdetails.html
@@ -31,15 +31,12 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightlisting.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightdetails.css" />
-    <link
-      rel="stylesheet"
-      href="/src/css/flight-page/flightbookingdetails.css"
-    />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightlisting.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightdetails.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightbookingdetails.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
