--- a/landing/index.html
+++ b/landing/index.html
@@ -30,10 +30,9 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
