--- a/stay/staysbookingdetails.html
+++ b/stay/staysbookingdetails.html
@@ -31,12 +31,12 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/css/stay-page/stayslisting.css" />
-    <link rel="stylesheet" href="/src/css/stay-page/staysdetails.css" />
-    <link rel="stylesheet" href="/src/css/stay-page/staysbookingdetails.css" />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/css/stay-page/staysdetails.css" />
+    <link rel="stylesheet" href="/css/stay-page/staysbookingdetails.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
