--- a/stay/staysbookingdetails.html
+++ b/stay/staysbookingdetails.html
@@ -124,7 +124,11 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="../flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
