--- a/auth/account.html
+++ b/auth/account.html
@@ -30,22 +30,28 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/src/css/flight-page/flightlisting.css" />
+    <link rel="stylesheet" href="/src/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/src/css/flight-page/flightdetails.css" />
+    <link rel="stylesheet" href="/src/css/flight-page/flightconfirmation.css" />
+    <link rel="stylesheet" href="/src/css/auth/favorites.css" />
+    <link rel="stylesheet" href="/src/css/auth/account.css" />
+    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
     <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DZbraFs1.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-DY_qfYMj.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/account-CDC8O0aV.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/flightForm-BNUiH5sV.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/stayForm-BQbN_MYX.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/nav-BUibuh3s.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/places-m7fFGoKg.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/main-r9sqtu08.js"></script>
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/favorites-B_XKJyor.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/account-IurjW48_.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/responsive-CsF7dNSY.css">
+    <script type="module" crossorigin src="/travellian-travel-app/assets/main-a-B6ufqH.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-nzHGQHgt.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/account-CX6cfeqU.js"></script>
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
