--- a/auth/accountpaymentmethod.html
+++ b/auth/accountpaymentmethod.html
@@ -30,12 +30,14 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- Custom Styles -->
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/src/css/auth/account.css" />
+    <link rel="stylesheet" href="/src/css/auth/signup.css" />
+    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
     <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DZbraFs1.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/account-CDC8O0aV.js"></script>
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/account-IurjW48_.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/signup-3rk7Cm95.css">
-    <link rel="stylesheet" crossorigin href="/travellian-travel-app/assets/responsive-CsF7dNSY.css">
+    <script type="module" crossorigin src="/travellian-travel-app/assets/account-CX6cfeqU.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/signup-l0sNRNKZ.js"></script>
   </head>
   <body>
     <!-- Login section -->
