--- a/stay/stayslisting.html
+++ b/stay/stayslisting.html
@@ -80,7 +80,11 @@
         </div>
         <!-- Mobile Navigation -->
         <div class="mobile-nav" id="mobileNav">
-          <a href="../flightsearch.html" class="mobile-link" target="_blank">
+          <a
+            href="../flight/flightsearch.html"
+            class="mobile-link"
+            target="_blank"
+          >
             <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
             <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
           </a>
