fix: styles at flight listing

--- a/auth/account.html
+++ b/auth/account.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <!-- Header & Navigation -->
-    <header>
+    <header class="header-2">
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
