--- a/stay/staysconfirmation.html
+++ b/stay/staysconfirmation.html
@@ -119,11 +119,15 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="../flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/stayslisting.html" class="mobile-link">
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
