--- a/auth/account.html
+++ b/auth/account.html
@@ -40,14 +40,13 @@
     <link rel="stylesheet" href="/travellian-travel-app/css/auth/account.css" />
     <link rel="stylesheet" href="/travellian-travel-app/css/utils/utilities.css" />
     <link rel="stylesheet" href="/travellian-travel-app/css/utils/responsive.css" />
-    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DZbraFs1.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-D8Rclskd.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/flightForm-BNUiH5sV.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/stayForm-BQbN_MYX.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/nav-BUibuh3s.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/places-m7fFGoKg.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/main-a-B6ufqH.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-nzHGQHgt.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/account-CX6cfeqU.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/main-BnrDjufC.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-Cl4_z2XQ.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/account-BGSLqwRq.js"></script>
   </head>
   <body>
     <!-- Header & Navigation -->
@@ -55,13 +54,13 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="/flight/flightsearch.html"
+            href="../flight/flightsearch.html"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="/stay/searchstays.html"
+            href="../stay/searchstays.html"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
             <img src="/travellian-travel-app/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -69,7 +68,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="../landing/index.html"
             ><img src="/travellian-travel-app/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -132,15 +131,19 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/travellian-travel-app/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/travellian-travel-app/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
         <a href="#" class="mobile-link fs-16 fw-semi-bold"
