--- a/auth/favorites.html
+++ b/auth/favorites.html
@@ -39,13 +39,12 @@
     <link rel="stylesheet" href="/travellian-travel-app/css/auth/favorites.css" />
     <link rel="stylesheet" href="/travellian-travel-app/css/utils/utilities.css" />
     <link rel="stylesheet" href="/travellian-travel-app/css/utils/responsive.css" />
-    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-DZbraFs1.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-nzHGQHgt.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/nav-BUibuh3s.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/swiper-D8Rclskd.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/favorites-Cl4_z2XQ.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/flights-Bw2lqAzd.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/flightdetails-CQFUp_Hb.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/flightdetails-CRz4-bGU.js"></script>
     <script type="module" crossorigin src="/travellian-travel-app/assets/flightForm-BNUiH5sV.js"></script>
-    <script type="module" crossorigin src="/travellian-travel-app/assets/flightlisting-BN-HyRsE.js"></script>
+    <script type="module" crossorigin src="/travellian-travel-app/assets/flightlisting-CQlDxGL9.js"></script>
   </head>
   <body>
     <!-- Header & Navigation -->
@@ -53,14 +52,14 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="/flight/flightsearch.html"
+            href="../flight/flightsearch.html"
             target="_blank"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="/stay/searchstays.html"
+            href="../stay/searchstays.html"
             target="_blank"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
@@ -69,7 +68,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/travellian-travel-app/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -104,14 +103,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/travellian-travel-app/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/travellian-travel-app/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/travellian-travel-app/assets/settings-icon.svg"
                 alt=""
@@ -132,18 +131,22 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/travellian-travel-app/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
         <a href="#" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/travellian-travel-app/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/account.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/travellian-travel-app/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
         >
       </div>
